syntax = "proto3";

package linky.controller;

import 'SegmentMeta.proto';

option java_package = "org.superhx.linky.controller.service.proto";
option java_multiple_files = false;
option java_outer_classname = "SegmentManagerServiceProto";

service SegmentManagerService {
    rpc create(CreateRequest) returns (CreateResponse) {}

    rpc getSegments(GetSegmentsRequest) returns (GetSegmentsResponse) {}

    rpc getSegment(GetSegmentRequest) returns (GetSegmentResponse) {}

    rpc seal(SealRequest) returns (SealResponse) {}
}

message CreateRequest {
    int32 topicId = 1;
    int32 partition = 2;
    int32 lastIndex = 3;
    string address = 4;
    int64 startOffset = 5;
}

message CreateResponse {
    enum Status {
        SUCCESS = 0;
        FAIL = 1;
    }
    Status status = 1;
}

message GetSegmentsRequest {
    int32 topicId = 1;
    int32 partition = 2;
}

message GetSegmentsResponse {
    repeated SegmentMeta segments = 1;
}

message GetSegmentRequest {
    int32 topicId = 1;
    int32 partition = 2;
    int32 index = 3;
}

message GetSegmentResponse {
    SegmentMeta meta = 1;
}

message SealRequest {
    int32 topicId = 1;
    int32 partition = 2;
    int32 index = 3;
}

message SealResponse {
    enum Status {
        SUCCESS = 0;
        FAIL = 1;
    }
    Status status = 1;
    int64 endOffset = 2;
}
